[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "e2e"
path = "src/main.rs"

[dependencies]
forwarding-relayer = { path = ".." }
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ethers = { version = "2.0", features = ["abigen"] }
clap = { version = "4.5", features = ["derive"] }
