[package]
name = "e2e"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "e2e"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ethers = { version = "2.0", features = ["abigen"] }
forwarding-relayer = { path = ".." }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
